filecaster/tests/ui/tuple_struct_not_supported.stderr
error: FromFile only works on structs with *named* fields.
       Tuple structs and unit structs are not supported.
 --> tests/ui/tuple_struct_not_supported.rs:4:8
  |
4 | struct MyTuple(i32, String);
  |        ^^^^^^^
