filecaster/tests/ui/tuple_struct_not_supported.rs
use filecaster::FromFile;

#[derive(FromFile)]
struct MyTuple(i32, String);

fn main() {}
